# t-stream

./: .gitignore  .pre-commit-config.yaml  config.json  pyproject.toml  readme.md  setup.sh
.github/workflows/: pre-commit.yml
src/: app.py  piratebay.py  spinner.py  test.py
