[project]
name = "t-stream"
version = "0.1.0"
description = "Stream torrents from your terminal with an interactive search flow."
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4==4.11.1",
    "bs4==0.0.1",
    "requests==2.27.1",
    "rich==12.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pyright>=1.1.410",
]
